--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                    Happy Birthday to you! May your life be filled with endless joy, and may all your dreams and wishes come true. May this year bring you boundless happiness, love, and success. You deserve all the best things in life. Here's to celebrating you on your special day!.
+                    Happy Birthday to you ☺️! May your life be filled with endless joy, and may all your dreams and wishes come true. May this year bring you boundless happiness, love, and success. You deserve all the best things in life. Here's to celebrating you on your special day!.
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
